Fix the horizontal scroll bar in the project view
Fixes #881

--- a/src/css/metacatui-common.css
+++ b/src/css/metacatui-common.css
@@ -3486,6 +3486,9 @@ body.mapMode{
 .sort-by select{
 	width: auto;
 }
+#results-container .pagination{
+	box-sizing: border-box;
+}
 /*-- The filter checkboxes --*/
 #includes-files label{
  	margin-right: 4px;
